añado varias páginas

--- a/tema2/html/acercade.html
+++ b/tema2/html/acercade.html
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <html>
   <head>
-<title>Viajes "Máster en J2EE"</title>
+<title>Acerca de...</title>
 </head>
 <body>
-<h1>Viajes "Máster en J2EE"</h1>
+<h1>Acerca de...</h1>
+
 
 <table border="0" align="center" width="50%">
   <thead>
@@ -18,14 +18,6 @@
   </thead>
 </table>
 
-<p>
-  Bienvenidos a este site.
-</p>
-
-<p>
-  Disculpen el aspecto gráfico de esta web, pero se ha construído sin
-  contenido dinámico.
-</p>
 
 <hr width="80%"/>
 <address>
