terminado el apartado sobre mí

--- a/tema2/html/acercade.html
+++ b/tema2/html/acercade.html
@@ -18,6 +18,19 @@
   </thead>
 </table>
 
+<p>
+  Esta pequeña web es un ejercicio del Máster en Java y J2EE que estoy
+  realizando.
+</p>
+
+<p>
+  Si queréis saber más sobre mí, podéis
+  visitar <a href="http://www.magmax.org">mi web</a>.
+</p>
+
+<center>
+  <img src="http://magmax.org/drupal/logo.png"/>
+</center>
 
 <hr width="80%"/>
 <address>
